Finally updated after a long hiatus.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <td id="left">&nbsp;</td>
               <td class="content">
                 <img alt="Logo" id="logo" src="files/logo.jpg"><br><br><br><br><br>
-                <span id='fr'><a href="database--models.html">Database &amp; Models &raquo;</a></span>
+                <span id='fr'><a href="models.html">Models &raquo;</a></span>
                 <span id='fl'></span>
                 <h1>How to create a Forum</h1> by Radar
                 <br><br>
@@ -43,7 +43,7 @@
                 <p></p>
                 <br><br>
 
-                <span id='fr'><a href="database--models.html">Database &amp; Models &raquo;</a></span>
+                <span id='fr'><a href="models.html">Models &raquo;</a></span>
                 <span id='fl'></span>
 
                 
