--- a/validations.html
+++ b/validations.html
@@ -15,7 +15,7 @@
                 <img alt="Logo" id="logo" src="files/logo.jpg"><br><br><br><br><br>
                 <h1>How to create a Forum</h1> by Radar
                 <span id='fr'><a href="routing-introduction.html">Routing Introduction &raquo;</a></span>
-                <span id='fl'><a href="database--models.html">&laquo; Database &amp; Models</a></span>
+                <span id='fl'><a href="models.html">Models</a></span>
                 <br><br>
                 <h2>Validations</h2>
                 <p>Now what if we don't want people entering blank data into our forms later on? Validations are the answer. We can validate the data before its entered into the database and provide error messages if something goes wrong.</p>
@@ -69,7 +69,7 @@
 
                 <span id='fr'><a href="routing-introduction.html">Routing Introduction &raquo;</a></span>
 
-                <span id='fl'><a href="database--models.html">&laquo; Database &amp; Models</a></span>
+                <span id='fl'><a href="models.html">&laquo; Models</a></span>
 
             
         </td><td id="right">&nbsp;</td></tr>
