--- a/models.html
+++ b/models.html
@@ -14,8 +14,8 @@
 <td class="content">
 <img alt="Logo" id="logo" src="files/logo.jpg"><br><br><br><br><br>
 <h1>How to create a Forum</h1> by Radar
-<span id="fr"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/validations">Validations »</a></span>
-<span id="fl"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/database">« Database</a></span>
+<span id="fr"><a href="validations.html">Validations »</a></span>
+<span id="fl"><a href="d">« Database</a></span>
 <br><br>
 <h2>Models</h2>
 <p>Let's get started by generating how our users are going to log in by
@@ -320,10 +320,8 @@ this:</p>
 <p>Onwards!</p>
 <br><br>
 
-<a href="http://localhost:3000/guides/how-to-create-a-forum/pages/3/edit">Edit Page</a>
-
-<span id="fr"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/validations">Validations »</a></span>
-<span id="fl"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/database">« Database</a></span>
+<span id="fr"><a href="validations.html">Validations »</a></span>
+<span id="fl"><a href="database.html">« Database</a></span>
 
 
 </td><td id="right">&nbsp;</td></tr>
