--- a/routing-introduction.html
+++ b/routing-introduction.html
@@ -14,8 +14,8 @@
 <td class="content">
 <img alt="Logo" id="logo" src="files/logo.jpg"><br><br><br><br><br>
 <h1>How to create a Forum</h1> by Radar
-<span id="fr"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/controllers">Controllers »</a></span>
-<span id="fl"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/validations">« Validations</a></span>
+<span id="fr"><a href="controllers.html">Controllers »</a></span>
+<span id="fl"><a href="validations.html">« Validations</a></span>
 <br><br>
 <h2>Routing Introduction</h2>
 <p>Now that we have our models, we can now define our routing. Routing
@@ -121,11 +121,8 @@ just the index.html file located in the public folder. You can delete
 this file and I recommend you do if you want to continue.
 </p>
 <br><br>
-
-  <a href="http://localhost:3000/guides/how-to-create-a-forum/pages/6/edit">Edit Page</a>
-
-<span id="fr"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/controllers">Controllers »</a></span>
-<span id="fl"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/validations">« Validations</a></span>
+<span id="fr"><a href="controllers.html">Controllers »</a></span>
+<span id="fl"><a href="validations.html">« Validations</a></span>
 
 </tbody></table>
 </div>
