--- a/views.html
+++ b/views.html
@@ -15,7 +15,7 @@
 <img alt="Logo" id="logo" src="files/logo.jpg"><br><br><br><br><br>
 <h1>How to create a Forum</h1> by Radar
 <span id="fr"></span>
-<span id="fl"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/controllers">« Controllers</a></span>
+<span id="fl"><a href="controllers.html">« Controllers</a></span>
 <br><br>
 <h2>Views</h2>
 <p>First of all we're going to create a layout for our site. Nothing too fancy. We start with a file called <em>application.html.erb</em> in the <em>app/views/layouts</em> folder. What? It's not there? Well create it then! While you're at it, make it look like this:</p>
@@ -417,10 +417,8 @@ please.
 </em></p>
 <em><br><br>
 
-<a href="http://localhost:3000/guides/how-to-create-a-forum/pages/9/edit">Edit Page</a>
-
 <span id="fr"></span>
-<span id="fl"><a href="http://localhost:3000/guides/how-to-create-a-forum/pages/controllers">« Controllers</a></span>
+<span id="fl"><a href="controllers.html">« Controllers</a></span>
 
 </td><td id="right">&nbsp;</td></tr>
 <tr><td colspan="3" id="bottom">&nbsp;</td></tr>
